<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Day Information -->
            <TextView
                android:id="@+id/tvDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/current_txt"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Location Information -->
            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDay"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/location_information_txt"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Icon and Condition side by side -->
            <LinearLayout
                android:id="@+id/layoutIconCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLocation"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Weather Icon -->
                <ImageView
                    android:id="@+id/imgWeatherIcon"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <!-- Condition -->
                <TextView
                    android:id="@+id/tvCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/weather_condition_txt"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Temperature -->
            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutIconCondition"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_temperature_txt"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- Humidity -->
            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTemperature"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_humidity_txt"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- Wind Speed -->
            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHumidity"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_wind_speed_txt"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
